# MyFPS

./: CMakeLists.txt  README.md
assets/shaders/: basic.frag  basic.vert  bild.frag  bild.vert
docs/: ArchitectureOverview.puml  GameLoop.puml  LayerGameArchitecture.puml  Relation.puml
include/engine/: Camera.h  CameraController.h  Entity.h  Input.h  Mesh.h  Physics.h  PhysicsBody.h  Renderer.h  Shader.h  parser.h
include/game/: Enemy.h  Player.h
include/math/: Mat4.h  Vec.h
include/network/: Client.h  NetPacket.h  NetworkInit.h  Server.h  UDP.h
include/world/: Map.h
src/: glad.c  main.cpp
src/engine/: Camera.cpp  CameraController.cpp  Entity.cpp  Input.cpp  Mesh.cpp  Physics.cpp  Renderer.cpp  Shader.cpp  parser.cpp
src/game/: Enemy.cpp  Player.cpp
src/math/: Mat4.cpp  Vec.cpp
src/network/: Client.cpp  NetworkInit.cpp  Server.cpp  UDP.cpp
src/world/: Map.cpp
